tests/errors/importMissing.milo
// @error: cannot open
from "nonexistent.milo" import { foo }

fn main(): i32 {
    return 0
}

